# nightshift

./: .gitignore  .pre-commit-config.yaml  1771713259156-brave-comet.md  Justfile  session-ses_37df.md
.github/scripts/: check-version.sh
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml  build.rs  claude_teams_mcp.py  goal.txt  opencode.json  planner-system-prompt.txt  team_config.txt  teams_db.spec.txt
daemon/migrations/: 0001_teams_db.sql  0002_member_baseline_commit.sql
daemon/src/: claude_ingest.rs  claude_transcript.rs  config.rs  daemon.rs  db.rs  diff.rs  main.rs  nodes.rs  openapi.rs  proxy.rs  teams.rs  teams_repo.rs  toolcalls.rs  update.rs
daemon/tests/: exec_recovery.rs  fd_hygiene.rs  openapi_proxy_blast.rs  thaw_threshold.rs  watchdog_behavior.rs
daemon/tests/support/: mod.rs
server/: .dockerignore  Dockerfile  fly.toml  package.json
server/src/: index.ts  redis.ts  sprites.ts
server/src/providers/: digitalocean.ts  index.ts  provider.ts  sprites.ts
server/src/scripts/: setup-digitalocean.sh  setup-sprite.sh
server/test/: index.test.ts
ui/: biome.json  package.json
ui/src/: middleware.ts  smoke.test.js
ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/src/app/(app)/: layout.tsx  page.tsx
ui/src/app/(app)/diff/: page.tsx
ui/src/app/(app)/session/[id]/: page.tsx
ui/src/app/(app)/settings/: page.tsx
ui/src/app/(app)/teams/: page.tsx
ui/src/app/api/git/diff/: route.ts
ui/src/app/api/instances/: route.ts
ui/src/app/api/lib/: docker.ts  opencode-client.ts
ui/src/app/api/machines/[[...path]]/: route.ts
ui/src/app/api/nodes/: route.ts
ui/src/app/api/opencode-proxy/[[...path]]/: route.ts
ui/src/app/api/opencode/[port]/agents/: route.ts
ui/src/app/api/opencode/[port]/config/: route.ts
ui/src/app/api/opencode/[port]/files/search/: route.ts
ui/src/app/api/opencode/[port]/git/diff/: route.ts
ui/src/app/api/opencode/[port]/health/: route.ts
ui/src/app/api/opencode/[port]/project/current/: route.ts
ui/src/app/api/opencode/[port]/providers/: route.ts
ui/src/app/api/opencode/[port]/session/[id]/: route.ts
ui/src/app/api/opencode/[port]/session/[id]/messages/: route.ts
ui/src/app/api/opencode/[port]/session/[id]/prompt/: route.ts
ui/src/app/api/opencode/[port]/session/create/: route.ts
ui/src/app/api/opencode/[port]/sessions/: route.ts
ui/src/app/api/sprites/[[...path]]/: route.ts
ui/src/app/api/system/hostname/: route.ts
ui/src/components/: accent-selector.tsx  agent-select.tsx  app-sidebar-nav.tsx  app-sidebar.tsx  chat-input.tsx  cmd.tsx  create-node-modal.tsx  empty-state.tsx  file-mention-popover.tsx  model-select.tsx  node-select.tsx  permission-dialog.tsx  question-dialog.tsx  session-diff-inline.tsx  session-status-bar.tsx  session-todos.tsx  theme-switcher.tsx
ui/src/components/icons/: arrow-down-circle-icon.tsx  arrow-up-circle-icon.tsx  badge-sparkle-icon.tsx  box-icon.tsx  chat-icon.tsx  eye-icon.tsx  feather-icon.tsx  file-diff-icon.tsx  git-pull-request-icon.tsx  grid-plus-icon.tsx  magnifier-icon.tsx  manage-instances-icon.tsx  pen-icon.tsx  send-icon.tsx  theme-dark-icon.tsx  theme-light-icon.tsx  theme-system-icon.tsx  user-icon.tsx
ui/src/components/parts/: agent-part.tsx  compaction-part.tsx  file-part.tsx  index.tsx  patch-part.tsx  reasoning-part.tsx  retry-part.tsx  subtask-part.tsx  text-part.tsx  tool-part.tsx
ui/src/components/ui/: avatar.tsx  badge.tsx  breadcrumbs.tsx  card.tsx  checkbox.tsx  command-menu.tsx  dialog.tsx  dropdown.tsx  field.tsx  grid-list.tsx  input.tsx  keyboard.tsx  loader.tsx  menu.tsx  popover.tsx  search-field.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx
ui/src/contexts/: breadcrumb-context.tsx
ui/src/hooks/: use-media-query.ts  use-opencode.ts  use-session-messages.ts
ui/src/lib/: api.ts  types.ts  use-create-session.ts
ui/src/providers/: theme-provider.tsx
ui/src/stores/: accent-store.ts  agent-store.ts  config-store.ts  event-store.ts  font-store.ts  instance-store.ts  message-store.ts  model-store.ts  node-store.ts  permission-store.ts  question-store.ts  session-store.ts
