[package]
name = "nightshift-daemon"
version = "0.0.9"
edition = "2021"
default-run = "nightshift-daemon"

[[bin]]
name = "fake_opencode"
path = "tests/bin/fake_opencode.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
