[package]
name = "nightshift-daemon"
version = "0.0.9"
edition = "2021"
default-run = "nightshift-daemon"

[[bin]]
name = "fake_opencode"
path = "tests/bin/fake_opencode.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# NOTE(victor): Do NOT use macos_kqueue feature. kqueue watches file descriptors
# (inodes), not paths. Atomic saves (write temp + rename) make the watch stale
# because the fd points to the old inode. FSEvents (the default) watches the
# directory tree and handles renames correctly.
# See: https://github.com/notify-rs/notify/issues/365
#      https://github.com/notify-rs/notify/issues/165
#      https://github.com/fsnotify/fsnotify/issues/17
notify = "7"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
