[package]
name = "nightshift-daemon"
version = "0.0.9"
edition = "2021"
default-run = "nightshift-daemon"

[[bin]]
name = "fake_opencode"
path = "tests/bin/fake_opencode.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"] }
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
utoipa = { version = "5", features = ["macros"] }
utoipa-axum = "0.2"
oas3 = "0.20"
# NOTE(victor): Do NOT use macos_kqueue feature. kqueue watches file descriptors
# (inodes), not paths. Atomic saves (write temp + rename) make the watch stale
# because the fd points to the old inode. FSEvents (the default) watches the
# directory tree and handles renames correctly.
# See: https://github.com/notify-rs/notify/issues/365
#      https://github.com/notify-rs/notify/issues/165
#      https://github.com/fsnotify/fsnotify/issues/17
notify = "7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[build-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
